# photonic

./: .dockerignore  .gitignore  2026-03-24-ml-photonics-implementation.md  README.md  getting-started.md  ml-training-guide.md  photonic-process.html  pnpm-lock.yaml  replit.md  tsconfig.json
.claude/: launch.json  settings.local.json
artifacts/api-server/: .env  package.json  tsconfig.json
artifacts/photonics-sim/: index.html  package.json  requirements.yaml  (+1 more)
artifacts/training-pipeline/: pyproject.toml
artifacts/training-pipeline/src/: __init__.py
artifacts/training-pipeline/src/active_learning/: __init__.py  collector.py  quality_gates.py
artifacts/training-pipeline/src/data_factory/: __init__.py  __main__.py  augmentation.py  circuit_generator.py  topology_templates.py
artifacts/training-pipeline/src/evaluation/: __init__.py  metrics.py
artifacts/training-pipeline/src/models/: __init__.py  forward_gnn.py  generative_cvae.py  surrogate_gnn.py
artifacts/training-pipeline/src/serve/: app.py
artifacts/training-pipeline/src/training/: __init__.py  export_onnx.py  train_generative.py  train_surrogate.py
artifacts/training-pipeline/tests/: test_export.py
deploy/: .env.production.example  Caddyfile  Caddyfile.http  README.md  api.Dockerfile  bootstrap-ubuntu-vps.sh  docker-compose.production.yml  launch-production.sh  sidecar.Dockerfile  web-entrypoint.sh  web.Dockerfile
design-system/: DESIGN-SYSTEM.md  photonic-circuit-visual.html
docs/: ROADMAP.md  architecture-overview.md  circuit-guide.md  component-reference.md  system-design-phase2.md
(+59 files in other folders)
