[project]
name = "photonics-ml-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "torch-geometric>=2.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "scikit-learn>=1.5",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "tqdm>=4.66",
  "matplotlib>=3.9",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
